--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -910,6 +910,9 @@ data_modified_team <- team_data %>%
          SessionOrder, 
          Team)
 
+# Plot location
+setwd(figure_directory)
+
 # Generate models with variable response
 response_variable <- "timeRemaining_team"
 data_focus_team <- data_modified_team
@@ -919,21 +922,24 @@ model.NoInteraction <- model_data_Target_Session(df = data_focus_team, dependent
 ggplot(model.NoInteraction, aes(x = .resid)) +
   geom_histogram(bins = 30) + 
   labs(title = paste("Histogram of Residuals for model.NoInteraction"), x = "", y = "") +
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave(filename = "Histogram_Residuals_TimeRemaining_NoInteraction_Team.png")
 
 # Fitted values - model.NoInteraction
 ggplot(model.NoInteraction, aes(x = .fitted, y = .resid)) +
   geom_point() + 
   geom_hline(yintercept = 0)+
   labs(title = paste("Fitted-Value Plot for model.NoInteraction"), x = "Fitted Values", y = "Residuals") +
-  theme(plot.title = element_text(hjust = 0.5)) 
+  theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave(filename = "FitteValue_Residuals_TimeRemaining_NoInteraction_Team.png")
 
 # QQ plots - model.NoInteraction
 ggplot(model.NoInteraction, aes(sample = .resid)) +
   stat_qq() +
   stat_qq_line()+
   labs(title = "Normal Q-Q Plot for NoInteraction", x = "Theoretical", y = "Sample") +
-   theme(plot.title = element_text(hjust = 0.5))
+   theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave(filename = "QQ_Residuals_TimeRemaining_NoInteraction_Team.png")
 ```
 
 model.NoInteraction: Visually, it looks like the model violates assumption 2 and 3 in the fitted-value plot and the QQ plot, respectively. I will need to compare this model to a robust model to examine the influence of the apparent violation. If there is a noticeable difference, I will need to transform the data.
@@ -948,6 +954,9 @@ data_modified_team <- team_data %>%
          SessionOrder, 
          Team)
 
+# Plot location
+setwd(figure_directory)
+
 # Generate models with variable response
 response_variable <- "timeRemaining_team"
 data_focus_team <- data_modified_team
@@ -957,7 +966,8 @@ model.NoInteraction.NoTarget <- model_data_Target_Session(df = data_focus_team, 
 ggplot(model.NoInteraction.NoTarget, aes(x = .resid)) +
   geom_histogram(bins = 30) + 
   labs(title = paste("Histogram of Residuals for model.NoInteraction.NoTarget"), x = "", y = "") +
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave(filename = "Histogram_Residuals_TimeRemaining_NoInteraction.NoTarget_Team.png")
 
 
 # Fitted values - model.NoInteraction.NoTarget
@@ -965,14 +975,16 @@ ggplot(model.NoInteraction.NoTarget, aes(x = .fitted, y = .resid)) +
   geom_point() + 
   geom_hline(yintercept = 0)+
   labs(title = paste("Fitted-Value Plot for model.NoInteraction.NoTarget"), x = "Fitted Values", y = "Residuals") +
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave(filename = "FittedValue_Residuals_TimeRemaining_NoInteraction.NoTarget_Team.png")
 
 # QQ plots - model.NoInteraction.NoTarget
 ggplot(model.NoInteraction.NoTarget, aes(sample = .resid)) +
   stat_qq() +
   stat_qq_line()+
   labs(title = "Normal Q-Q Plot for NoInteraction.NoTarget", x = "Theoretical", y = "Sample") +
-   theme(plot.title = element_text(hjust = 0.5)) 
+   theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave(filename = "QQ_Residuals_TimeRemaining_NoInteraction.NoTarget_Team.png")
 ```
 
 model.NoInteraction.NoTarget: Visually, it looks like the model violates assumption 2 and 3 in the fitted-value plot and the QQ plot, respectively. I will need to compare this model to a robust model to examine the influence of the apparent violation. If there is a noticeable difference, I will need to transform the data.
