--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -1557,9 +1557,23 @@ ggplot(data = plot_data_ind) +
   geom_histogram(aes_string(x = dependent_response_ind), bins = 30) +
   facet_grid(. ~ Target) + 
   labs(title = title_response_ind, x = x_label_ind, y = y_label_ind)
+
+# Information about the N values in each condition
+tableData <- ind_data %>%
+  group_by(Target) %>%
+  summarise(N = length(.data[[dependent_response_team]]))
+
+tableData %>%
+  kable() %>%
+  kable_styling()
 ```
 
-The distrabution plot is similar to the the overall distrabution plot. However, the majority of participants in the Team condition seem to need around 50 seconds to collect a correct item while participants in the Ind condition needed 60 or 70 seconds. 
+The distrabution plot is similar to the the overall distrabution plot. However, the majority of participants in the Team condition seem to need around 50 seconds to collect a correct item while participants in the Ind condition needed 60 or 70 seconds.
+
+```{r}
+
+```
+
 
 
 # References
