--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -1619,13 +1619,54 @@ How does the session order influence the collection rate distibution?
 
 The next step is to see how the distrabutions look when the data is group by Target and Session Order. 
 
+## The section below is for the collection rate for correct items. Still nees work XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ### Q: Is there exciting variation among the *Collection_rate_correct_item* that explains how the feedback conditions influence the time remaining when session order is taken into consideration?
 
 
 ```{r}
+# Data to model
+data_modified_ind <- ind_data %>%
+  select(Collection_rate_correct_item_ind,
+         Target, 
+         SessionOrder, 
+         Team, 
+         Player_ID, 
+         Dominate.Strategy) %>%
+  filter(Dominate.Strategy == "Go Together")
 
+# Plot location
+setwd(figure_directory)
+
+# Generate models with variable response
+response_variable <- "Collection_rate_correct_item_ind"
+data_focus_ind <- data_modified_ind
+model.NoInteraction <- model_data_Target_Session(df = data_focus_ind, dependent =  response_variable, model.type =  "NoInteraction", is.team = FALSE, is.robust = FALSE)
+
+# Histogram of Residuals - model.NoInteraction
+ggplot(model.NoInteraction, aes(x = .resid)) +
+  geom_histogram(bins = 30) + 
+  labs(title = paste("Histogram of Residuals for model.NoInteraction"), x = "", y = "") +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave("Histogram_Residuals_TimeRemaining_NoInteraction_Ind.png")
+
+# Fitted values - model.NoInteraction
+ggplot(model.NoInteraction, aes(x = .fitted, y = .resid)) +
+  geom_point() + 
+  geom_hline(yintercept = 0)+
+  labs(title = paste("Fitted-Value Plot for model.NoInteraction"), x = "Fitted Values", y = "Residuals") +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave("FittedValue_Residuals_TimeRemaining_NoInteraction_Ind.png")
+
+# QQ plots - model.NoInteraction
+ggplot(model.NoInteraction, aes(sample = .resid)) +
+  stat_qq() +
+  stat_qq_line()+
+  labs(title = "Normal Q-Q Plot for NoInteraction", x = "Theoretical", y = "Sample") +
+   theme(plot.title = element_text(hjust = 0.5)) +
+  ggsave("QQ_Residuals_TimeRemaining_NoInteraction_Ind.png")
+
+summary(model.NoInteraction)
+emmeans(model.NoInteraction, list(pairwise ~ Target), adjust = "tukey")
 ```
-
-
 
 # References
